# yam

./: .gitignore  .npmrc  LICENSE  README.md  generate_sounds.py  index.html  package-lock.json  package.json
.githooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: pages.yml  release.yml
Casks/: yames.rb
docs/: CNAME  index.html  manifest.json  robots.txt  sitemap.xml  style.css
plans/: ACCENT_PATTERN_PLAN.md  AI_EVALUATION_BACKLOG.md  DSP_AND_COACH_INTELLIGENCE_PLAN.md  DSP_EVALUATION_PLAN.md  FEATURE_ROADMAP.md  MOBILE_IMPLEMENTATION_PLAN.md  PLAYING_EVALUATION_PLAN.md  PRACTICE_COACH_UX_PLAN.md  PRESETS_PLAN.md  SEO_LANDING_PAGE_PLAN.md  TAP_TEMPO_AND_PRESETS_PLAN.md  TAP_TEMPO_PLAN.md
snap/: snapcraft.yaml
src/: App.tsx  ipc.ts  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_input.rs  clock.rs  coach.rs  commands.rs  engine.rs  lib.rs  main.rs  midi.rs  models.rs  onset.rs  session.rs  state.rs  timing.rs  tts.rs
src/components/: AudioInputTestModal.tsx  CoachCard.tsx  DriftMeter.tsx  DrillView.tsx  EvaluationPanel.tsx  FloatingWidget.tsx  FullscreenView.tsx  MainWindow.tsx  PresetSidebar.tsx  SettingsTimeline.tsx  SpectrumAnalyzer.tsx  ThemeEffects.tsx  TrackView.tsx  TrainView.tsx  ViewTransition.tsx  ZenEffects.tsx  ZenTransition.tsx
src/hooks/: useDrag.ts  useEvaluation.ts  useGamepad.ts  useMetronome.ts  useMidi.ts  useSession.ts  useTapTempo.ts
src/styles/: audio-input-test.css  (+12 more)
winget/: turutupa.yames.yaml
(+10 files in other folders)
