[package]
name = "yames"
version = "0.9.0"
description = "Yet Another Metronome Everyone Skips — practice metronome with MIDI control, speed drills, and AI coach"
authors = ["you"]
edition = "2021"

[lib]
name = "yames_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
cpal = "0.15"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
midir = "0.10"

# LLM inference for Practice Coach (requires cmake to build)
# Enable with: cargo build --features coach-llm
llama-cpp-2 = { version = "0.1", features = ["metal"], optional = true }

[features]
default = []
coach-llm = ["llama-cpp-2"]

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
core-foundation-sys = "0.8"
